# ConstroleDeEstoque

controle-de-estoque/: package-lock.json  package.json
controle-de-estoque/src/: App.css  App.jsx  Var.css  utils.js
controle-de-estoque/src-tauri/: Cargo.toml  tauri.conf.json
controle-de-estoque/src-tauri/src/: main.rs
controle-de-estoque/src-tauri/src/database/: mod.rs
controle-de-estoque/src-tauri/src/database/entities/: cliente.rs  contrato.rs  mod.rs  movimentacao.rs  pedido.rs  pedidos_mensais.rs  pedidos_por_intervalo.rs  pedidos_semana_mensal.rs  pedidos_semanais.rs
controle-de-estoque/src-tauri/src/database/traits/: crudable.rs  mod.rs  pedidos_recorrentes.rs
controle-de-estoque/src-tauri/src/env/: mod.rs
controle-de-estoque/src/Components/AdressCard/: AdressCard.jsx
controle-de-estoque/src/Components/CadastroContainer/: CadastroContainer.css  CadastroContainer.jsx  FormCadastroContainer.jsx
controle-de-estoque/src/Components/CardPedidoUnico/: CardPedidoUnico.jsx
controle-de-estoque/src/Components/ContainerCliente/: ContainerCliente.css  ContainerCliente.jsx
controle-de-estoque/src/Components/ContratoInput/: ContratoInput.css  ContratoInput.jsx
controle-de-estoque/src/Components/ErrorDialog/: ErrorDialog.jsx
controle-de-estoque/src/Components/MenuBar/: MenuBar.css  MenuBar.jsx
controle-de-estoque/src/Components/Moldal/: CadastroEnderecos.jsx  Modal.css
controle-de-estoque/src/Components/PedidoUnicoInput/: PedidoUnicoInput.css  PedidoUnicoInput.jsx
controle-de-estoque/src/Components/PeriodoCombo/: PeriodoCombo.css  PeriodoCombo.jsx
(+27 files in other folders)
