
[package]
name = "controle-de-estoque"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "controle_de_estoque_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
mongodb = "3.1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"
bcrypt = "0.16.0"
regex = "1.5.4"
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4"] }

